feat(global): 二次封装axios,添加动画lottie

--- a/src/components/share/index.module.less
+++ b/src/components/share/index.module.less
@@ -1,5 +1,7 @@
 .shareBox {
   width: 100%;
+  max-width: 600px; /* 设置最大宽度 */
+  margin: 0 auto;
   height: 490px;
   background: url('../../assets/img/share_bg.png') no-repeat;
   background-size: cover;
@@ -34,11 +36,17 @@
         margin-bottom: 4px;
       }
     }
+    .footBtn {
+      display: flex;
+      align-items: center;
+      margin: 20px auto;
+      justify-content: space-between;
+      padding: 0px 42px;
+    }
     .shareBtn {
-      width: 260px;
+      width: 240px;
       height: 42px;
       border-radius: 26px;
-      margin: 20px auto;
       display: flex;
       align-items: center;
       justify-content: center;
