--- a/src/layout/FooterBar/index.module.less
+++ b/src/layout/FooterBar/index.module.less
@@ -1,5 +1,7 @@
 .footerBar {
   width: 100%;
+  max-width: 600px; /* 设置最大宽度 */
+  margin: 0 auto;
   height: 68px;
   // background: url('../../assets/img/footer_bar_icon_bg.png') no-repeat;
   // background-size: 100% 100%;
