--- a/src/layout/MainLayout/index.module.less
+++ b/src/layout/MainLayout/index.module.less
@@ -1,7 +1,8 @@
 .mainLayout {
   width: 100%;
+  max-width: 600px; /* 设置最大宽度 */
+  margin: 0 auto;
   height: calc(100vh - 66px);
-  // padding-bottom: 20px; 
   background-color: #000;
   box-sizing: border-box;
   overflow-y: auto; 
