--- a/src/pages/gameOn/index.module.less
+++ b/src/pages/gameOn/index.module.less
@@ -29,7 +29,12 @@
         display: flex;
         align-items: center;
         justify-content: space-between;
+        .leftInfo {
+          display: flex;
+          align-items: center;
+        }
         .info {
+          margin-left: 10px;
           .gameName {
             font-size: 16px;
             font-weight: 600;
