--- a/src/pages/mission/index.module.less
+++ b/src/pages/mission/index.module.less
@@ -4,7 +4,7 @@
   padding: 0px 15px;
   box-sizing: border-box;
   background: url('../../assets/img/BG.png') no-repeat;
-  background-size: contain;
+  background-size: 100% auto;
   color: #fff;
   .header {
     padding-top: 60px;
@@ -26,7 +26,12 @@
       align-items: center;
       justify-content: space-between;
       margin-bottom: 15px;
+      .leftItem{
+        display: flex;
+        align-items: center;
+      }
       .content {
+        margin-left: 10px;
         .name {
           font-size: 16px;
           line-height: 16px;
