--- a/src/pages/zin/components/welcome/index.module.less
+++ b/src/pages/zin/components/welcome/index.module.less
@@ -1,5 +1,6 @@
 .welcome {
   width: 100%;
+  max-width: 600px;
   height: 100%;
   box-sizing: border-box;
   position: absolute;
@@ -7,8 +8,12 @@
   background-color: #0C0C0CCC;
   text-align: center;
   color: #fff;
+  display: flex;
+  align-items: center;  
+  justify-content: center;  
+  flex-direction: column; 
   >h3 {
-    margin: 195px auto 30px;
+    // margin: 195px auto 30px;
     width: 286px;
     font-size: 30px;
     font-weight: 400;
