--- a/src/pages/zin/index.module.less
+++ b/src/pages/zin/index.module.less
@@ -87,6 +87,11 @@
       margin-bottom: 20px;
     }
   }
+  // .lottieBox {
+  //   width: 20px;
+  //   height: 20px;
+  //   opacity: 0; 
+  // }
   .lark {
     width: 20px;
     height: 20px;
