--- a/src/components/drawer/index.module.less
+++ b/src/components/drawer/index.module.less
@@ -3,6 +3,8 @@
   left: 0;
   right: 0;
   bottom: -100%; /* 隐藏在视口外 */
+  max-width: 600px;
+  margin: 0 auto;
   background-color: #fff;
   box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.2);
   transition: bottom 0.3s ease; /* 动画效果 */
