fix(global): 接口枚举定义

--- a/src/pages/zin/index.module.less
+++ b/src/pages/zin/index.module.less
@@ -4,7 +4,7 @@
   padding: 0px 15px;
   box-sizing: border-box;
   background: url('../../assets/img/zin_going_bg.jpg') no-repeat;
-  background-size: 87% auto;
+  // background-size: 87% auto;
   color: #fff;
   .header {
     padding-top: 60px;
@@ -15,6 +15,7 @@
       height: 150px;
       background: url('../../assets/img/zin_balance_bg.png') no-repeat;
       background-size: 100% 100%;
+      background-position: -6px;
       background-color: #000;
       text-align: center;
       justify-content: center;
