--- a/src/components/share/index.module.less
+++ b/src/components/share/index.module.less
@@ -40,8 +40,8 @@
       display: flex;
       align-items: center;
       margin: 20px auto;
-      justify-content: space-between;
-      padding: 0px 42px;
+      justify-content: center;
+      // padding: 0px 42px;
     }
     .shareBtn {
       width: 240px;
@@ -51,6 +51,7 @@
       align-items: center;
       justify-content: center;
       font-size: 16px;
+      margin-right: 8px;
       background: linear-gradient(90deg, #EAA03E 0%, #E53B00 100%);
     }
   }
