--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -131,3 +131,27 @@ body,
 	width: 100%;
 	height: 100%;
 }
+
+/* 针对 Webkit 浏览器（如 Chrome、Safari） */
+::-webkit-scrollbar {
+  width: 0px; /* 设置滚动条的宽度 */
+  height: 0px; /* 设置水平滚动条的高度 */
+}
+
+/* 滚动条轨道 */
+::-webkit-scrollbar-track {
+  background-color: rgba(0, 0, 0, 0); /* 轨道的背景色 */
+  border-radius: 10px;
+}
+
+/* 滚动条滑块 */
+::-webkit-scrollbar-thumb {
+  background-color: rgba(0, 0, 0, 0); /* 滑块的颜色 */
+  border-radius: 10px;
+  border: 2px solid rgba(0, 0, 0, 0); /* 滑块的边框颜色 */
+}
+
+/* 滚动条滑块在 hover 时 */
+::-webkit-scrollbar-thumb:hover {
+  background-color: rgba(0, 0, 0, 0); /* 滑块悬停时的颜色 */
+}
