--- a/src/pages/mission/index.module.less
+++ b/src/pages/mission/index.module.less
@@ -7,20 +7,27 @@
   background-size: 100% auto;
   color: #fff;
   .header {
-    padding-top: 60px;
+    padding-top: 34px;
     display: flex;
     align-items: center;
     justify-content: space-between;
+    .shareIcon {
+      width: 30px;
+      height: 34.5px;
+      
+    }
   }
   .missionContent {
     margin-top: 26px;
     padding-bottom: 30px;
     .missionItem {
       width: 100%;
-      padding: 16px;
+      padding: 12px;
       box-sizing: border-box;
       // border: 2px solid #4D4D4D;
       background: url('../../assets/img/border_line.png') no-repeat;
+      // background-color: #000;
+      // border-radius: 8px;
       background-size: 100% 100%;
       display: flex;
       align-items: center;
@@ -37,6 +44,7 @@
           line-height: 16px;
         }
         .dsc {
+          display: block;
           color: #808080;
           margin-top: 6px;
         }
@@ -60,6 +68,7 @@
     .onItem {
       background: url('../../assets/img/select_border_icon.png') no-repeat;
       background-size: 100% 100%;
+      // background-color: #000;
     }
   }
   .lark {
