--- a/src/pages/zin/components/welcome/index.module.less
+++ b/src/pages/zin/components/welcome/index.module.less
@@ -5,7 +5,9 @@
   box-sizing: border-box;
   position: absolute;
   z-index: 888;
-  background-color: #0C0C0CCC;
+  // background-color: #0C0C0CCC;
+  background: rgba(12, 12, 12, 0.80);
+  backdrop-filter: blur(10px);
   text-align: center;
   color: #fff;
   display: flex;
