--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -1,4 +1,28 @@
-/* Reset style sheet */
+@font-face {
+	font-family: Roboto-Regular;
+	src: url(../assets/fonts/Roboto-Regular-14.ttf);
+}
+
+@font-face {
+	font-family: Roboto-Bold;
+	src: url(../assets/fonts/Roboto-Bold-3.ttf);
+}
+
+@font-face {
+	font-family: Roboto-Medium;
+	src: url(../assets/fonts/Roboto-Medium-12.ttf);
+}
+
+@font-face {
+	font-family: Roboto-Light;
+	src: url(../assets/fonts/Roboto-Light-10.ttf);
+}
+
+@font-face {
+	font-family: Roboto-Black;
+	src: url(../assets/fonts/Roboto-Black-1.ttf);
+}
+
 html,
 body,
 div,
@@ -105,6 +129,8 @@ section {
 body {
 	padding: 0;
 	margin: 0;
+	font-family: Roboto-Regular;
+	background-color: black;
 }
 ol,
 ul {
