--- a/src/components/drawer/index.module.less
+++ b/src/components/drawer/index.module.less
@@ -2,16 +2,18 @@
   position: fixed;
   left: 0;
   right: 0;
-  bottom: -100%; /* 隐藏在视口外 */
+  bottom: 0;
   max-width: 600px;
   margin: 0 auto;
-  background-color: #fff;
-  box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.2);
-  transition: bottom 0.3s ease; /* 动画效果 */
-  z-index: 1000; /* 确保在上层 */
   background-color: #000;
+  box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.2);
+  transition: transform 1s ease; /* 使用 transform 动画 */
+  transform: translateY(100%); /* 初始位置在视口底部外 */
+  z-index: 1000;
+  color: #fff;
+  font-family: Roboto-Regular;
   &.open {
-    bottom: 0; /* 展开时的位置 */
+    transform: translateY(0); /* 展开时的位置 */
   }
 }
 
