--- a/src/pages/zin/index.module.less
+++ b/src/pages/zin/index.module.less
@@ -13,7 +13,7 @@
       padding-top: 38px;
       width: 100%;
       height: 150px;
-      background: url('../../assets/img/zin_balance_bg.png') no-repeat;
+      background: url('../../assets/img/zin_bg.png') no-repeat;
       background-size: 100% 100%;
       background-position: -6px;
       background-color: #000;
